# acquire-zarr

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  MANIFEST.in  README.md  justfile  pyproject.toml  setup.py  vcpkg.json
.github/workflows/: benchmark.yml  build.yml  nightly-tag.yml  release.yml  test.yml  test_pr.yml
benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark.py  main.py  plot_benchmarks.py  run_benchmarks.py  wp_bench.py
examples/: CMakeLists.txt  README.md  leak-checker.c  stream-compressed-multiscale-to-s3.c  stream-compressed-to-filesystem.c  stream-compressed-to-s3.c  stream-multiarray-to-filesystem.cpp  stream-raw-multiscale-to-filesystem.c  stream-raw-to-filesystem.c  stream-raw-to-s3.c  vcpkg.json  zarrv2-compressed-s3.c  zarrv2-raw-filesystem.c  zarrv2-raw-s3.c  zarrv3-compressed-filesystem.c  zarrv3-compressed-multiscale-s3.c  zarrv3-compressed-s3.c  zarrv3-raw-filesystem.c  zarrv3-raw-multiscale-filesystem.c  zarrv3-raw-s3.c
examples/config/: flat.json  flat.yaml  hcs.yaml
examples/deprecated/: README.md  zarrv2-compressed-s3.c  zarrv2-raw-filesystem.c
examples/deprecated/python/: zarrv2-compressed-multiscale-filesystem.py  zarrv2-compressed-s3.py  zarrv2-raw-filesystem.py
examples/python/: leak-checker.py  stream_compressed_multiscale_s3.py  stream_compressed_s3.py  stream_compressed_to_filesystem.py  stream_multiarray_to_filesystem.py  stream_raw_filesystem.py  stream_raw_multiscale_filesystem.py  stream_raw_to_s3.py  zarrv2-compressed-s3.py  zarrv3-compressed-filesystem.py  zarrv3-raw-s3.py
include/: acquire.zarr.h  zarr.types.h
python/: CMakeLists.txt  acquire-zarr-py.cpp
python/acquire_zarr/: __init__.pyi
python/tests/: conftest.py  test_dimension_transposition.py  test_minimal.py  test_settings.py  test_stream.py
src/streaming/: CMakeLists.txt  acquire.zarr.cpp  array.base.cpp  array.base.hh  array.cpp  array.dimensions.cpp  array.dimensions.hh  array.hh  array.writer.cpp  array.writer.hh  chunk.cpp  chunk.hh  definitions.hh  downsampler.cpp  downsampler.hh  file.handle.cpp  file.handle.hh  file.sink.cpp  file.sink.hh  frame.queue.cpp  frame.queue.hh  fs.shard.cpp  fs.shard.hh  group.cpp  group.hh  multiscale.array.cpp  multiscale.array.hh  node.cpp  node.hh  plate.cpp  plate.hh  platform.hh  s3.connection.cpp  s3.connection.hh  s3.shard.cpp  s3.shard.hh  s3.sink.cpp  s3.sink.hh  settings.io.cpp  settings.io.hh  (+31 more)
src/streaming/posix/: file.sink.impl.cpp  platform.cpp
src/streaming/win32/: file.sink.impl.cpp  platform.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  compressed-test-helper.hh  estimate-memory-usage.cpp  profile.cpp  stream-2d-multiscale-to-filesystem.cpp  stream-3d-multiscale-to-filesystem.cpp  stream-compressed-to-filesystem.cpp  stream-compressed-to-s3.cpp  stream-from-config-file.cpp  stream-mixed-flat-and-hcs-acquisition.cpp  stream-multi-frame-append.cpp  stream-multiple-arrays-to-filesystem.cpp  stream-multiscale-trivial-3rd-dim.cpp  stream-named-array-to-filesystem.cpp  stream-named-array-to-s3.cpp  stream-ngff-no-multiscale.cpp  stream-pure-hcs-acquisition.cpp  stream-raw-to-filesystem.cpp  stream-raw-to-s3.cpp  stream-with-ragged-final-shard.cpp  stream-zarr-v2-compressed-to-filesystem.cpp  stream-zarr-v2-compressed-to-s3.cpp  stream-zarr-v2-named-array-to-filesystem.cpp  stream-zarr-v2-named-array-to-s3.cpp  stream-zarr-v2-raw-to-filesystem.cpp  stream-zarr-v2-raw-to-s3.cpp  stream-zarr-v3-2d-multiscale-to-filesystem.cpp  stream-zarr-v3-3d-multiscale-to-filesystem.cpp  stream-zarr-v3-compressed-to-filesystem.cpp  stream-zarr-v3-compressed-to-s3.cpp  stream-zarr-v3-multi-frame-append.cpp  stream-zarr-v3-multiple-arrays-to-filesystem.cpp  stream-zarr-v3-multiscale-trivial-3rd-dim.cpp  stream-zarr-v3-named-array-to-filesystem.cpp  stream-zarr-v3-named-array-to-s3.cpp  stream-zarr-v3-raw-to-filesystem.cpp  stream-zarr-v3-raw-to-s3.cpp  test.macros.hh
tests/unit-tests/: CMakeLists.txt  array-dimensions-chunk-internal-offset.cpp  array-dimensions-chunk-lattice-index.cpp  array-dimensions-courtesy-flush.cpp  array-dimensions-shard-index-for-chunk.cpp  array-dimensions-shard-internal-index.cpp  array-dimensions-tile-group-offset.cpp  array-write-even.cpp  array-write-fixed-size.cpp  array-write-frame-with-id.cpp  array-write-ragged-append-dim.cpp  array-write-ragged-internal-dim.cpp  array-writer-write-frame-to-chunks.cpp  common-construct-data-paths.cpp  construct-data-paths.cpp  create-stream-simple-array-root.cpp  create-stream-with-metadata.cpp  create-stream.cpp  downsampler-odd-z.cpp  downsampler.cpp  file-sink-write.cpp  frame-queue.cpp  fs-shard-flush.cpp  fsshard-flush.cpp  make-data-sinks.cpp  make-dirs.cpp  make-metadata-sinks.cpp  metadata-shrink-stale-bytes.cpp  partial-append.cpp  plate.cpp  s3-connection-bucket-exists.cpp  s3-connection-object-exists-check-false-positives.cpp  s3-connection-put-object.cpp  s3-connection-upload-multipart-object.cpp  s3-shard-flush.cpp  s3-sink-write-multipart.cpp  s3-sink-write.cpp  shard-finalize.cpp  shard-flush.cpp  shard-write-frame.cpp  (+21 more)
